[workspace]
members = [
    "nle_app",
    "nle_core",
    "nle_data",
    "nle_media",
    "nle_render",
    "nle_audio",
    "nle_utils",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
wgpu = "0.19"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"

# Optimization for development
[profile.dev]
opt-level = 0
debug = true

# Optimization for release
[profile.release]
opt-level = 3
lto = true
